# Document

./: .gitignore  README.md  styleguide.md
cmake/: CMakeLists.txt  README.md
cmake/c-example/: CMakeLists.txt
cmake/config-example/: CMakeLists.txt  TutorialConfig.h  TutorialConfig.h.in  tutorial.cxx
cmake/cpp-example/: CMakeLists.txt  main.cpp
cmake/cpp-example/Debug/: cpp-example
cpp-network-library/: readme.md
cpp-network-library/boost-asio/: CMakeLists.txt  readme.md
cpp-network-library/boost-asio/asio-ip-tcp/: CMakeLists.txt  client.cpp  server.cpp
cpp-network-library/boost-asio/asio-steady_timer/: CMakeLists.txt  main.cpp
cpp-network-library/boost-asio/coroutine/: CMakeLists.txt  server.cpp
cpp-network-library/boost-asio/file-io/: CMakeLists.txt  main.cpp
cpp-network-library/boost-asio/hello/: CMakeLists.txt  main.cpp
cpp-network-library/boost-asio/multithread/: CMakeLists.txt  main.cpp
cpp-network-library/boost-asio/scoped_ptr/: CMakeLists.txt
cpp-network-library/cpp-netlib/: CMakeLists.txt  readme.md
cpp-network-library/cpp-netlib/http-client/: CMakeLists.txt  main.cpp
cpp-network-library/cpp-netlib/http-server/: CMakeLists.txt  main.cpp
cpp-network-library/cpp-netlib/simple-client/: CMakeLists.txt  main.cpp
cpp-network-library/cpp-netlib/simple-wget/: CMakeLists.txt  main.cpp
cpp-network-library/epoll/: CMakeLists.txt  readme.md
cpp-network-library/epoll/echo-server/: CMakeLists.txt  main.cpp
cpp-network-library/epoll/thread-echo-server/: CMakeLists.txt  main.cpp
cpp-network-library/zeromq/: CMakeLists.txt  readme.md
cpp-network-library/zeromq/pub-example/: CMakeLists.txt  client.cpp  server.cpp
cpp-network-library/zeromq/zeromq-receiver/: CMakeLists.txt  main.cpp
cpp-network-library/zeromq/zeromq-sender/: CMakeLists.txt  main.cpp
db/: README.md
db/mysql/: readme.md
django/: readme.md
docker/: README.md
docker/centos7_4/: Dockerfile
docker/ubuntu16_4/: Dockerfile
elasticsearch/: readme.md
gradle/: readme.md
gradle/gradle-init/: build.gradle
gradle/multi-project/app/: build.gradle
gradle/multi-project/app/src/main/java/com/example/: HelloWorld.java
gradle/multi-project/app/src/main/resources/: logback.xml
gradle/multi-project/core/src/main/java/com/example/core/: CoreApi.java
ide/vscode/: readme.md
linux/: README.md  setup.md
linux/gdb/: readme.md
linux/shell/: README.md
logger/slf4j/fileappender/src/main/java/com/example/: FileAppender.java  SampleLogger.java
logger/slf4j/fileappender/src/main/resources/: logback.xml
logger/slf4j/hello-world/: build.gradle
logger/slf4j/hello-world/src/main/java/: HelloWorld.java
logger/slf4j/slf4-logback/: build.gradle
logger/slf4j/slf4-logback/src/main/java/com/example/: SampleLogger.java
logger/slf4j/slf4-logback/src/main/resources/: logback.xml
logger/slf4j/slf4-marker/: build.gradle
logger/slf4j/slf4-marker/src/main/java/com/example/: HelloWorld.java
logger/slf4j/slf4-marker/src/main/resources/: logback.xml
logger/util-logger/file-logger/src/main/java/hello/: CustomFormatter.java  HelloWorld.java  LogFile.java  SimpleCustomFile.java
nltk/: README.md  nltk-download.py  nltk-test.py
nodejs/: README.md
nodejs/http-server/: py2_http_server.py  readme.md
optimization/: jvm.md
python/: readme.md
python/basic/: basic.py
python/keras/: readme.md
python/pytorch/: readme.md
redis/: readme.md
redis/gradle/hello-example/src/main/java/example/: HelloWorld.java
redis/hello-example/: build.gradle
redis/java-client/: build.gradle
redis/java-client/src/main/java/com/david/redis/client/jedis/: RedisJavaClient.java
springboot/: readme.md
springboot/dist-jar/: build.gradle
springboot/dist-war/: build.gradle
springboot/dist-war/src/main/java/hello/: Application.java  HelloController.java
springboot/sping-web/: build.gradle
springboot/sping-web/src/main/java/com/example/: WebApplication.java  WelcomeController.java
springboot/sping-web/src/main/resources/css/: main.css
springboot/sping-web/src/main/resources/templates/: welcome.html
springboot/spring-guides/: build.gradle
springboot/ssl-example/: build.gradle
springboot/ssl-example/src/main/java/com/example/sslserver/: SslServerApplication.java
springboot/ssl-example/src/main/resources/: application.properties  ssl-server.jks
