# 요구 CMake 최소 버전
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# 프로젝트 이름 및 버전
PROJECT("scoped_ptr" CXX)
SET(OUTPUT_BIN "scoped_ptr")

SET(PROJECT_VERSION_MAJOR 0)
SET(PROJECT_VERSION_MINOR 1)

# 빌드 형상(Configuration) 및 주절주절 Makefile 생성 여부
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_VERBOSE_MAKEFILE true)

# 빌드 대상 바이너리 파일명 및 소스 파일 목록
SET(SRC_FILES
        main.cpp
        )


set(CMAKE_CXX_STANDARD 11)
if (CMAKE_COMPILER_IS_GNUCXX)
    add_definitions(-std=c++11)
endif ()

# 출력 디렉토리
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib)

# 빌드 대상 바이너리 추가
ADD_EXECUTABLE(${OUTPUT_BIN} ${SRC_FILES})